@@ -1,3 +1,9 @@
+2004-01-08  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* elf32-m68k.c (elf_m68k_gc_sweep_hook): Terminate early
+	if no dynamic object is present.  Declare r_symndx and h in an
+	inner scope.
+
 2004-01-07  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* elfxx-ia64.c (elfNN_ia64_relax_section): Don't install
